fixed button alignment

--- a/client/src/pages/Client/Client.css
+++ b/client/src/pages/Client/Client.css
@@ -1,9 +1,3 @@
-h3 {
-    text-align: center;
-}
 
-#divider {
-	margin-left: 35%;
-}
 
 
