--- a/client/src/pages/Contact/Contact.css
+++ b/client/src/pages/Contact/Contact.css
@@ -1,7 +1,4 @@
-#divider {
-    margin-left: 35%;
-    
-}
+
 
 #contact-title {
     text-align: center;
@@ -12,9 +9,3 @@
 	text-align: left;
 }
 
-
-
-p {
-  font-size: 16px;
-  color: #7b7b7b;
-}
