--- a/client/src/pages/Home/Home.css
+++ b/client/src/pages/Home/Home.css
@@ -25,7 +25,7 @@ h3 {
 }
 
 #divider {
-	margin-left: 40%;
+	margin-left: 50%;
 }
 
 #home-why {
@@ -33,7 +33,7 @@ h3 {
 }
 
 #appt {
-    float: left;
+    margin-left: 5%;
 }
 
 
